--- a/IT-W/1/links/ec.html
+++ b/IT-W/1/links/ec.html
@@ -10,15 +10,7 @@
     </center>
     <hr>
     <p><strong><u>Vision of Department:</u></strong></p>
-<p>Our vision is to start post graduate courses in Electronics &amp; communication fields, are as follows:-</p>
-<p>VLSI TECHNOLOGY, COMMUNICATION TECHNOLOGY, IMAGE PROCESSING, EMBEDDED SYSTEM.</p>
-<p>The next phase is definitely towards Consultancy, Testing and R&amp;D activities, which will be taken up by the EC department. The student can take the guidance from the faculty for the Research work for the award of their Ph.D. Degree.</p>
-<p>Consultancy program for design work of various products which are related to the field.</p>
-<p>Industry interfacing for the placement and training.</p>
-<p>&nbsp;</p>
-<p><strong><u>Mission of Department:</u></strong></p>
-<p>The first most prime important mission of the EC department is to produce the engineer to use their skill for entrepreneurship. Our efforts will be to have the proper placement of the Graduate engineers through our LDRP INSTITUTE OF TECHNOLOGY AND RESEARCH. Contribute to overall techno-economical development of the State in particular and Nation in general and improve quality of life of communities.”</p>
-
+<p>Our vision is to start post graduate courses in Electronics &amp; communication fields</p>
       <strong><u>Faculties</u></strong>
       <ol>
         <li>Meet Patel</li>
