--- a/IT-W/1/links/ee.html
+++ b/IT-W/1/links/ee.html
@@ -9,21 +9,9 @@
       <b><u><h1 style="color:Sienna ;">Electrical Engineering</h1></u></b>
     </center>
     <hr>
-    <p><strong>Department Established year:  2005-06.</strong></p>
-<p><strong>Intake</strong></p>
-<p><strong>BE:  60 seats (1st Shift) and 60 seats (2nd Shift) – Total 120 seats</strong></p>
-<p><strong>ME:  Electrical Power System: 24 seats</strong></p>
-<p><strong>Total number of laboratories with Names:</strong></p>
-<ul>
-<li><strong>Electrical Machine</strong></li>
-<li><strong>High Voltage Engineering</strong></li>
-<li><strong>Power system Protection</strong></li>
-<li><strong>Power Electronics/ microcontroller/ microprocessor</strong></li>
-<li><strong>Basic electrical engineering/department workshop</strong></li>
-<li><strong>Power system simulation</strong></li>
-<li><strong>Electrical Measurements and Measuring Instrument/industrial instruments</strong></li>
-<li><strong>Analog and digital Electronics</strong></li>
-<li><strong>Control system/ control theory</strong></li>
+    <p>Electrical engineering is a technical discipline concerned with the study,
+       design and application of equipment, devices and systems which use electricity,
+       electronics, and electromagnetism.</p>
 </ul>
 
       <strong><u>Faculties</u></strong>
