--- a/IT-W 18BECE30099/1/home.html
+++ b/IT-W 18BECE30099/1/home.html
@@ -8,7 +8,7 @@
       <b><u><h1 style="color:Sienna ;">LDRP - ITR</h1></u></b>
     </center>
     <hr>
-    <h2>Welcome to LDRP &#8211; ITR (A Constituent College of KSV)</h2>
+    <h2>Welcome to LDRP - ITR (A Constituent College of KSV)</h2>
 </ul>
     <h3>Departments</h3>
     <ul>
