--- a/IT-W 18BECE30099/1/links/cce.html
+++ b/IT-W 18BECE30099/1/links/cce.html
@@ -10,7 +10,8 @@
     </center>
     <hr>
 			<p><strong>Vision of Department:</strong></p>
-<p>To become a school of excellence that brings out civil engineers with high technical competencies and promotes high-end research to meet the current and future challenges in civil engineering</p>
+<p>To become a school of excellence that brings out civil engineers with high technical competencies
+  and promotes high-end research to meet the current and future challenges in civil engineering</p>
 
       <strong><u>Faculties</u></strong>
       <ol>
