--- a/IT-W 18BECE30099/1/links/ce.html
+++ b/IT-W 18BECE30099/1/links/ce.html
@@ -10,7 +10,9 @@
     </center>
     <hr>
       <p>
-        Established in 2005, the Computer Engineering department of LDRP Institute of Technology and Research offers Bachelor of Engineering (B. E.) and Master of Engineering (M. E.) programmes in Computer Engineering.</p>
+        Established in 2005, the Computer Engineering department of LDRP Institute
+         of Technology and Research offers Bachelor of Engineering (B. E.) and
+          Master of Engineering (M. E.) programmes in Computer Engineering.</p>
       <strong><u>Faculties</u></strong>
       <ol>
         <li>Meet Patel</li>
