--- a/IT-W 18BECE30099/1/links/it.html
+++ b/IT-W 18BECE30099/1/links/it.html
@@ -9,7 +9,8 @@
       <b><u><h1 style="color:Sienna ;">Information Technology</h1></u></b>
     </center>
     <hr>
-To establish the department with teaching and research identity in the domain of computer engineering in responding to the challenges in the world of 21st century with a profound zeal for astuteness, ethnicity and principles.</p>
+To establish the department with teaching and research identity in the domain of computer engineering
+ in responding to the challenges in the world of 21st century with a profound zeal for astuteness, ethnicity and principles.</p>
 </ul>
       <strong><u>Faculties</u></strong>
       <ol>
