--- a/IT-W 18BECE30099/1/links/me.html
+++ b/IT-W 18BECE30099/1/links/me.html
@@ -9,7 +9,9 @@
       <b><u><h1 style="color:Sienna ;">Mechanical Engineering</h1></u></b>
     </center>
     <hr>
-<p>To impart nationally and internationally recognized education in Mechanical Engineering, leading to well-qualified engineers who are innovative contributors to the profession and successful in advanced studies and research.</p>
+<p>To impart nationally and internationally recognized education in Mechanical Engineering,
+   leading to well-qualified engineers who are innovative contributors to the profession
+   and successful in advanced studies and research.</p>
       <strong><u>Faculties</u></strong>
       <ol>
         <li>Meet Patel</li>
