--- a/IT-W 18BECE30099/2.html
+++ b/IT-W 18BECE30099/2.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>D division</title>
   </head>
-
   <style>
     table {
       width:60%;
@@ -96,6 +95,34 @@
         </tr>
         <tr>
           <td>6</td>
+        </tr>
+      </table>
+      <br>
+      <br>
+      <table border="5" id="t01">
+        <tr>
+          <th>Subject Name</th>
+          <th>Subject Teacher</th>
+        </tr>
+        <tr>
+          <td>Data structure And Algorithms</td>
+          <td>Mahendra Khambadiya</td>
+        </tr>
+        <tr>
+          <td>Digital Electronics</td>
+          <td>Khusbu R Joshi, Payal Shah</td>
+        </tr>
+        <tr>
+          <td>IT workshop</td>
+          <td>Vaidehi Patel</td>
+        </tr>
+        <tr>
+          <td>Discrete Maths</td>
+          <td>Dr. kumkum Jain, Harsh Shah</td>
+        </tr>
+        <tr>
+          <td>Database managment system</td>
+          <td>Avani Dadhaniya</td>
         </tr>
       </table>
     </center>
