--- a/IT-W 18BECE30099/3.html
+++ b/IT-W 18BECE30099/3.html
@@ -26,8 +26,8 @@
       <tr>
         <td>Collage:</td>
         <td>
-          <input type="checkbox" name="vehicle1" value="LDRP"> LDRP-ITR<br>
-          <input type="checkbox" name="vehicle2" value="Car"> VPMP
+          <input type="checkbox" name="clg" value="LDRP"> LDRP-ITR<br>
+          <input type="checkbox" name="clg" value="VPMP"> VPMP
         </td>
       </tr>
       <tr>
