--- a/IT-W 18BECE30099/4/FA.html
+++ b/IT-W 18BECE30099/4/FA.html
@@ -1,5 +1,7 @@
 <html>
-<head>  FRAMES </head>
+<head>
+<title>Frames</title>
+</head>
 <body>
 <h3><center><b> SELECT SOMETHING </b> </center></h3>
 <a href="D:\programming\IT-W 18BECE30099\1\home.html" target ="b">WEBPAGE OF LDRP </a> <br>
