--- a/IT-W 18BECE30099/5.html
+++ b/IT-W 18BECE30099/5.html
@@ -14,7 +14,7 @@
     <b>Birth date : </b> 05-07-2000 <br>
     <b>Address : </b> Ahmedabad <br>
     <b>Pincode : </b> 380005 <br>
-    <b>Linkdin : </b><a href="www.linkdin.com/in/Meet"> Meet57 </a><br>
+    <b>Linkdin : </b><a href="www.linkedin.com/in/Meet"> Meet57 </a><br>
     <h3> <b> <font color="gray"> Qualification : </font></b> </h3>
     <table border="1" style="width:30%">
         <tr>
