--- a/IT-W 18BECE30099/3.html
+++ b/IT-W 18BECE30099/3.html
@@ -14,7 +14,7 @@
       </tr>
       <tr>
         <td>Email:</td>
-        <td><input name="firstname" type="text"></td>
+        <td><input name="email" type="text"></td>
       </tr>
       <tr>
         <td>Gender:</td>
@@ -26,14 +26,14 @@
       <tr>
         <td>Collage:</td>
         <td>
-          <input type="checkbox" name="clg" value="LDRP"> LDRP-ITR<br>
+          <input type="checkbox" name="clg" value="LDRP"> LDRP-ITR
           <input type="checkbox" name="clg" value="VPMP"> VPMP
         </td>
       </tr>
       <tr>
         <td>Feedback about:</td>
         <td>
-          <select name="cars">
+          <select name="about">
             <option value="Canteen">Canteen</option>
             <option value="Teachers">Teachers</option>
             <option value="Classroom">Classroom</option>
