--- a/IT-W 18BECE30099/5.html
+++ b/IT-W 18BECE30099/5.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Resume</title>
@@ -14,11 +13,11 @@
     <b>Birth date : </b> 05-07-2000 <br>
     <b>Address : </b> Ahmedabad <br>
     <b>Pincode : </b> 380005 <br>
-    <b>Linkdin : </b><a href="www.linkedin.com/in/Meet"> Meet57 </a><br>
+    <b>Linkdin : </b><a href="www.linkedin.com/in/meet57"> Meet57 </a><br>
     <h3> <b> <font color="gray"> Qualification : </font></b> </h3>
-    <table border="1" style="width:30%">
+    <table border="1" width=50%>
         <tr>
-          <th>course</th>
+          <th>Course</th>
           <th>University</th>
           <th>Duration</th>
           <th>Year</th>
@@ -36,7 +35,7 @@
           <td>2018</td>
         </tr>
         <tr>
-          <td>BE-CV</td>
+          <td>BE-CE</td>
           <td>KSV</td>
           <td>4 Year</td>
           <td>2022</td>
