--- a/IT-W 18BECE30099/try/fa.html
+++ b/IT-W 18BECE30099/try/fa.html
@@ -1,32 +1,39 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Try html and css</title>
-  </head>
-  <body>
-    <div class="nav">
-      <center>
-        <h1>Try html and css</h1>
-      </center>
-      <ul>
-        <li> <a href="#">Home</a> </li>
-        <li> <a href="#">About</a> </li>
-        <li> <a href="#">Contact</a> </li>
-      </ul>
-    </div>
-    <hr>
-    <div class="body">
-      <div class="left">
-        <h1>Hello</h1>
-        <h2><b>Welcome to our website</b></h2>
-        <h3>this is just an html page to know about css and html</h3>
-      </div>
-      <div class="right">
-        <h1>Welcome Noob</h1>
-        <p>welcome to this sight this will help you to learn html and css</p>
-        <input name="Name" value="This will print in box">
-        <br>
-        <button> Click here </button>
-      </div>
-    </div>
-  </body>
+
+<head>
+	<title>
+		Get value of selected
+		radio button
+	</title>
+</head>
+
+<body>
+	<p>
+		Select a radio button and click on Submit.
+	</p>
+
+	Gender:
+	<input type="radio" name="gender" value="Male">Male
+	<input type="radio" name="gender" value="Female">Female
+	<input type="radio" name="gender" value="Others">Others
+
+	<br>
+
+	<button type="button" onclick="displayRadioValue()">
+		Submit
+	</button>
+
+	<br>
+
+	<div id="result"></div>
+
+	<script>
+		function displayRadioValue() {
+			var ele = document.getElementsByName('gender');
+
+			document.getElementById('result').innerHTML = ele;
+		}
+	</script>
+</body>
 </html>
