--- a/IT-W 18BECE30099/3/3.html
+++ b/IT-W 18BECE30099/3/3.html
@@ -26,8 +26,7 @@
       <tr>
         <td>Collage:</td>
         <td>
-          <input type="checkbox" name="clg" value="LDRP"> LDRP-ITR
-          <input type="checkbox" name="clg" value="VPMP"> VPMP
+			<input name="firstname" type="text">
         </td>
       </tr>
       <tr>
